# 3D_Pose_Estimation_CVPR2016

./: LICENSE  README.md  get_data.sh
MEX/: parse_nn_human36m.m
MEX/src/: CMakeLists.txt
MEX/src/cmake/Modules/: FindGFlags.cmake  FindGLOG.cmake  FindGLOG.cmake~
MEX/src/cpp/body_pose/: body_part_sample.cpp  body_part_sample.hpp  body_pose_types.hpp  body_pose_utils.cpp  body_pose_utils.hpp  common.hpp  utils.cpp  utils.hpp
MEX/src/cpp/body_pose/clustering/: body_clustering.cpp  body_clustering.hpp  clustering_features.cpp  clustering_features.hpp
MEX/src/cpp/fashion/skin/: SkinColorModel.h  SkinColorModelGaussian.cc  SkinColorModelGaussian.h  SkinMain.cc  SkinSegmentation.cc  SkinSegmentation.h
MEX/src/cpp/learning/common/: classifier_interface.hpp  eval_utils.hpp  eval_utils.tpp  image_sample.hpp  sampling.hpp
MEX/src/cpp/learning/forest/: binary_svm_split.hpp  forest.cpp  forest.hpp  param.hpp  part_sample.hpp  sample.hpp  simple_split.hpp  svn_split.hpp  tree.hpp  tree_node.hpp
MEX/src/cpp/learning/forest/utils/: eval_utils.hpp  eval_utils.tpp
MEX/src/cpp/learning/pictorial_structure/: inferenz.cpp  inferenz.hpp  learn_model_parameter.cpp  learn_model_parameter.hpp  math_util.hpp  model.hpp  part.cpp  part.hpp  utils.cpp  utils.hpp
MEX/src/cpp/utils/: file_utils.cpp  file_utils.hpp  image_file_utils.cpp  image_file_utils.hpp  string_utils.cpp  string_utils.hpp  system_utils.cpp  system_utils.hpp  thread_pool.hpp  threading.cpp  threading.hpp  timing.hpp
MEX/src/cpp/utils/data_structure/: fixed_priority_queue.hpp
MEX/src/cpp/utils/libsvm/: liblinear.cpp  liblinear.hpp  libsvm_common.hpp
MEX/src/cpp/utils/serialization/: dlib_serialization.hpp  opencv_serialization.hpp  proto_serialization.hpp  serialization.cpp  serialization.hpp
MEX/src/cpp/vision/: geometry_utils.cpp  geometry_utils.hpp  image_utils.cpp  image_utils.hpp  mean_shift.cpp  mean_shift.hpp  min_max_filter.cpp  min_max_filter.hpp
MEX/src/cpp/vision/features/: bow_extractor.cpp  bow_extractor.hpp  bow_histogram.hpp  extractor.hpp  extractor_factory.cpp  extractor_factory.hpp  extractor_param.proto  extrema_bow_extractor.cpp  extrema_bow_extractor.hpp  local_word_container.cpp  local_word_container.hpp  low_level_features.cpp  low_level_features.hpp  multi_bow_extractor.cpp  multi_bow_extractor.hpp  simple_feature.cpp  simple_feature.hpp  spmbow_extractor.cpp  spmbow_extractor.hpp  tools.hpp
MEX/src/cpp/vision/features/feature_channels/: feature_channel_factory.cpp  feature_channel_factory.hpp  hog_extractor.cpp  hog_extractor.h
MEX/src/cpp/vision/features/global/: gist.cpp  gist.hpp
MEX/src/cpp/vision/features/low_level/: color.cpp  color.hpp  dense_surf.cpp  dense_surf.hpp  dense_surf_test.cpp  felzen_hog.cpp  felzen_hog.hpp  hog.cpp  hog.hpp  holbp.cpp  holbp.hpp  lbp.cpp  lbp.hpp  low_level_feature_extractor.cpp  low_level_feature_extractor.hpp  root_sift.cpp  root_sift.hpp  self_similarity.cpp  self_similarity.hpp  surf.cpp  surf.hpp
MEX/src/eval_pose_human36m_bestscale_with_nn_and_assign_weights/: CMakeLists.txt  eval_pose_human36m_bestscale_with_nn_and_assign_weights.cpp
MEX/src/eval_pose_human36m_multiscale/: CMakeLists.txt  eval_pose_human36m_multiscale.cpp  eval_pose_human36m_multiscale.cpp~
code/: H_MainHuman36MbmS11.m  H_dirFiles.m  H_dirFilesUm.m  H_drawLineH36M.m  H_emptyMotion2D.m  H_getRigidTransform.m  H_getRootTranslationHE2D.m  H_getSkelFitH36M.m  H_getUnique.m  H_mat2cellMot.m  H_myFormatJoints.m  H_normSkelHeight.m  H_orderMotJointsHE2D.m  H_rigidTransform.m  H_rigidTransformKnn.m  H_rigid_motionShort.m  H_rodriguesShort.m  H_text2MotFile.m  H_text2MotFileUmH36Mbm.m  H_text2MotFileUmH36Mbm_wtnn.m  H_writeImageTest.m  H_writeImageTest2.m  Hashim.m  Initialize.m  RUN_Complete.m  RUN_Iterated.m  cleanUp.m  createImageIndexPathFile.m  createTable.m  cvpr.m  deg2rad.m  emptyMotion.m  errorHumanEva.m  extractSingleGT.m  getJointsHE.m  getJointsIdx.m  getShapeJointNum.m  getSingleJntIdx.m  getSkelFit.m  getSkelHeight2D.m  (+19 more)
tools/: addDirsToPath.m  calcDirTime.m
tools/animate/: addAnimatedPatches.m  animate.m  animate_initGraphics.m  animate_showFrame.m  animatedPatchStruct.m  clearTracePoses.m  coordsCappedCylinder.m  coordsDiscNormal.m  coordsGridDiscNormal.m  createAnimatedPatches.m  createGroundPlane.m  createSkeletonLines.m  emptyVarsGlobalAnimStruct.m  params_cappedCylinder.m  params_planePointNormal.m  params_planePointNormal_hipMiddle.m  params_planePointNormal_yAxis.m  params_planePointPoint.m  params_point.m  saveCamera.m  showTracePoses.m  showTrajectory.m
tools/cutTool/: applyCutMapping.m  cutAMC.m  cutC3D.m  mocapTakes2Cuts.txt  sortCutFiles.m
tools/motionTools/: C_rotateMotion.m  addAccToMot.m  addAngVelToMot.m  addBonesToMot.m  addCrossToMot.m  addExpMapToMot.m  addLocalAccToMot.m  addVelToMot.m  convert2GlobalSystems.m  convert2LocalSystems.m  convertExpMapToQuat.m  deriveTimeline.m  fitMotion.m  prepareMotForQuery.m  removeOrientation.m  removeSkating.m  removeTranslation.m  reverseMotion.m  rotateMotion.m  translateMotion.m
tools/motionplayer/: PrimBone.m  PrimConnector.m  PrimGroundplane.m  PrimSphere.m  addArmature.m  addMarker.m  addObjectToScene.m  createBoneObjects.m  defaultoptions.mat  emptyObject.m  emptyScene.m  evalFields.m  getCarObject.m  getColorByNum.m  getDefaultOptions.m  getLight.m  getObjBoundingBox.m  getObjVerticesStream.m  getObject.m  getSensorObject.m  isColor.m  isMarker.m  isMot.m  isSkel.m  joerg.m  loadexamplemotion.m  markertest.mat  motionplayer.m  motionplayerVideo.m  motionplayer_old.m  motionplayergui.m  patchRawFile.m  (+9 more)
tools_intern/: addDirsToPath.m
utils/: GetSkelMeasurements.m  LinearKDERegressor_Data2.m  ProjectPointRadial.m  ProjectPointRadial_inverse.m  TransformAngles2BVH.m  TransformJointsAngles.m  TransformJointsPositions.m  computeDynamics.m  computeTOFindex.m  dispprogress.m  getchunk.m  iscluster.m  normalize_angles.m  preproc_mask.m  show2DPose.m  showCamera.m  showPose.m  update2DPose.m  updatePose.m
(+2309 files in other folders)
